--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Slab&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -25,10 +28,11 @@
         <div class="info">
             <p class="up">Check the</p>
             <h3>figures</h3>
-            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum nisi 
+            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum nisi
                 aut excepturi exercitationem error, totam repellendus quis, cupiditate
-                consectetur dicta voluptatem. Ducimus earum cupiditate quo nam magni
-                laborum aut nihil.
+                consectetur dicta exercitationem error voluptatem. 
+                Ducimus earum cupiditate quo nam magni laborum aut nihil.
+                
             </p>
             <img src="images/figures.png" alt="figures-of-chess">
         </div>
