finish website for mobiles

--- a/index.html
+++ b/index.html
@@ -17,29 +17,153 @@
 
 <body>
 
-    <div class="container">
+    <div class="container" id="home">
         <h1>CHESS GAME</h1>
         <h3>chess set</h3>
         <a href="#">More</a>
-        <img src="images/chess.png" alt="Chess-image">
+        <img src="images/chess.png" id="figures" alt="Chess-image">
     </div>
 
     <section class="figures">
         <div class="info">
-            <p class="up">Check the</p>
+            <h6 class="up">Check the</h6>
             <h3>figures</h3>
             <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum nisi
                 aut excepturi exercitationem error, totam repellendus quis, cupiditate
-                consectetur dicta exercitationem error voluptatem. 
+                consectetur dicta exercitationem error voluptatem.
                 Ducimus earum cupiditate quo nam magni laborum aut nihil.
-                
             </p>
             <img src="images/figures.png" alt="figures-of-chess">
         </div>
     </section>
-    <br><br><br><br><br><br><br><br><br><br>
+
+    <section class="desciption" id="details">
+        <div class="figure">
+            <div class="content-image">
+                <img src="images/Rey.png" alt="">
+            </div>
+            <div class="figure-info">
+                <h5 class="desciption-up">The</>
+                <h2 class="name">KING</h2>
+                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
+                    illum tempore cupiditate voluptate eius culpa non consectetur earum. Odit
+                    ullam quisquam libero ipsum nostrum voluptatum non consectetur earum. Odit
+                    ullam quisquam libero ipsum nostrum voluptatum.
+                </p>
+                <a href="#">View More...</a>
+            </div>
+        </div>
+        <div class="figure">
+            <div class="content-image">
+                <img src="images/reyna.png" alt="">
+            </div>
+            <div class="figure-info">
+                <h5 class="desciption-up">The</h5>
+                <h2 class="name">QUEEN</h2>
+                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
+                    illum tempore cupiditate voluptate eius culpa non consectetur earum. Odit
+                    ullam quisquam libero ipsum nostrum voluptatum non consectetur earum. Odit
+                    ullam quisquam libero ipsum nostrum voluptatum.
+                </p>
+                <a href="#">View More...</a>
+            </div>
+        </div>
+        <div class="figure">
+            <div class="content-image">
+                <img src="images/alfil.png" alt="">
+            </div>
+            <div class="figure-info">
+                <h5 class="desciption-up">The</h5>
+                <h2 class="name">BISHOP</h5>
+                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
+                    illum tempore cupiditate voluptate eius culpa non consectetur earum. Odit
+                    ullam quisquam libero ipsum nostrum voluptatum non consectetur earum. Odit
+                    ullam quisquam libero ipsum nostrum voluptatum.
+                </p>
+                <a href="#">View More...</a>
+            </div>
+        </div>
+        <div class="figure">
+            <div class="content-image">
+                <img src="images/caballo.png" alt="">
+            </div>
+            <div class="figure-info">
+                <h5 class="desciption-up">The</h5>
+                <h2 class="name">KNIGHT</h2>
+                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
+                    illum tempore cupiditate voluptate eius culpa non consectetur earum. Odit
+                    ullam quisquam libero ipsum nostrum voluptatum non consectetur earum. Odit
+                    ullam quisquam libero ipsum nostrum voluptatum.
+                </p>
+                <a href="#">View More...</a>
+            </div>
+        </div>
+        <div class="figure">
+            <div class="content-image">
+                <img src="images/torre.png" alt="">
+            </div>
+            <div class="figure-info">
+                <h5 class="desciption-up">The</h5>
+                <h2 class="name">ROOK</h2>
+                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
+                    illum tempore cupiditate voluptate eius culpa non consectetur earum. Odit
+                    ullam quisquam libero ipsum nostrum voluptatum non consectetur earum. Odit
+                    ullam quisquam libero ipsum nostrum voluptatum.
+                </p>
+                <a href="#">View More...</a>
+            </div>
+        </div>
+        <div class="figure">
+            <div class="content-image">
+                <img src="images/peon.png" alt="">
+            </div>
+            <div class="figure-info">
+                <h5 class="desciption-up">The</h5>
+                <h2 class="name">PAWN</h2>
+                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
+                    illum tempore cupiditate voluptate eius culpa non consectetur earum. Odit
+                    ullam quisquam libero ipsum nostrum voluptatum non consectetur earum. Odit
+                    ullam quisquam libero ipsum nostrum voluptatum.
+                </p>
+                <a href="#">View More...</a>
+            </div>
+            <div class="separador"></div>
+        </div>
+    </section>
+
+    <section class="chessboard" id="chessboard">
+        <div class="info-chessboard">
+            <h5>check the</h4>
+            <h3>Chessboard</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum nihil optio culpa iste 
+                laboriosam minus tempora delectus quam id voluptate repellendus, quaerat explicabo 
+                architecto voluptatem! Ea id quibusdam quisquam? Dolorem inventore aut, eum illum 
+                magni sapiente sed voluptate sit mollitia illo accusamus, asperiores ullam quaerat?
+                A, hic neque asperiores qui quisquam aspernatur, quia tempora deserunt excepturi 
+                fugiat sunt, deleniti consequatur mollitia illo accusamus, asperiores ullam quaerat?
+                A, hic neque asperiores qui quisquam aspernatur, quia tempora deserunt excepturi 
+                fugiat sunt, deleniti consequatur!</p>
+        </div>
+        <div class="image">
+            <img src="images/chessboard.png" alt="">
+        </div>
+    </section>
 
 
+    <footer>
+        <div class="separador-footer"></div>
+        <div class="links">
+            <ul>
+                <li><a href="#home"> Home</a></li>
+                <li><a href="#figures">Figures</a> </li>
+                <li><a href="#details">Details</a> </li>
+                <li><a href="#chessboard">Chessboard</a> </li>
+            </ul>
+        </div>
+        <div class="developer">
+            <h2> Made by <span>Lautaro Lazzeri</span> </h2>
+        </div>
+    </footer>
     <script src="main.js"></script>
 </body>
 
