--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <div class="container" id="home">
         <h1>CHESS GAME</h1>
         <h3>chess set</h3>
-        <a href="#">More</a>
+        <a href="#figuresinfo">More</a>
         <img src="images/chess.png" id="figures" alt="Chess-image">
     </div>
 
     <section class="figures">
-        <div class="info">
+        <div class="info" id="figuresinfo">
             <h6 class="up">Check the</h6>
             <h3>figures</h3>
             <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum nisi
@@ -50,7 +50,7 @@
                     ullam quisquam libero ipsum nostrum voluptatum non consectetur earum. Odit
                     ullam quisquam libero ipsum nostrum voluptatum.
                 </p>
-                <a href="#">View More...</a>
+                <a href="https://es.wikipedia.org/wiki/Ajedrez">View More...</a>
             </div>
         </div>
         <div class="figure">
@@ -65,7 +65,7 @@
                     ullam quisquam libero ipsum nostrum voluptatum non consectetur earum. Odit
                     ullam quisquam libero ipsum nostrum voluptatum.
                 </p>
-                <a href="#">View More...</a>
+                <a href="https://es.wikipedia.org/wiki/Ajedrez">View More...</a>
             </div>
         </div>
         <div class="figure">
@@ -80,7 +80,7 @@
                     ullam quisquam libero ipsum nostrum voluptatum non consectetur earum. Odit
                     ullam quisquam libero ipsum nostrum voluptatum.
                 </p>
-                <a href="#">View More...</a>
+                <a href="https://es.wikipedia.org/wiki/Ajedrez">View More...</a>
             </div>
         </div>
         <div class="figure">
@@ -95,12 +95,12 @@
                     ullam quisquam libero ipsum nostrum voluptatum non consectetur earum. Odit
                     ullam quisquam libero ipsum nostrum voluptatum.
                 </p>
-                <a href="#">View More...</a>
+                <a href="https://es.wikipedia.org/wiki/Ajedrez">View More...</a>
             </div>
         </div>
         <div class="figure">
             <div class="content-image">
-                <img src="images/torre.png" alt="">
+                <img class="wpd" src="images/torre.png" alt="">
             </div>
             <div class="figure-info">
                 <h5 class="desciption-up">The</h5>
@@ -110,7 +110,7 @@
                     ullam quisquam libero ipsum nostrum voluptatum non consectetur earum. Odit
                     ullam quisquam libero ipsum nostrum voluptatum.
                 </p>
-                <a href="#">View More...</a>
+                <a href="https://es.wikipedia.org/wiki/Ajedrez">View More...</a>
             </div>
         </div>
         <div class="figure">
@@ -125,7 +125,7 @@
                     ullam quisquam libero ipsum nostrum voluptatum non consectetur earum. Odit
                     ullam quisquam libero ipsum nostrum voluptatum.
                 </p>
-                <a href="#">View More...</a>
+                <a href="https://es.wikipedia.org/wiki/Ajedrez">View More...</a>
             </div>
             <div class="separador"></div>
         </div>
